--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+/*--Google font--*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 body {
     font-family: 'Poppins', sans-serif;
 }
+
+/*--Google font--*/
 
 .container {
     width: 100%;
@@ -30,7 +33,7 @@ p {
 }
 
 .watch-btn {
-    border-radius: 5px;
+    border-radius: 8px;
     padding: 15px 30px;
     background-color: #DD0000;
     display: inline-block;
@@ -56,6 +59,7 @@ p {
 
 .mid-container {
     display: flex;
+    margin-top: 100px;
 }
 
 .small-cont {
@@ -68,6 +72,7 @@ p {
 nav ul li {
     list-style: none;
     margin-top: 15px;
+    border: 10px;
 }
 
 nav ul li a {
@@ -80,7 +85,7 @@ nav ul li a {
 }
 
 .mat {
-    border-radius: 5px;
+    border-radius: 8px;
     background-color: #ffffff;
     color: #000000;
     padding: 15px 20px;
@@ -88,7 +93,7 @@ nav ul li a {
 }
 
 .grp {
-    border-radius: 5px;
+    border-radius: 8px;
     background-color: #ffffff;
     color: #000000;
     padding: 15px 20px;
@@ -96,9 +101,34 @@ nav ul li a {
 }
 
 .blg {
-    border-radius: 5px;
+    border-radius: 8px;
     background-color: #DD0000;
     color: #ffffff;
     padding: 15px 20px;
     display: inline-block;
+}
+
+.watch-box {
+    margin-left: 20px;
+    border: 1px solid silver;
+    border-radius: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+}
+
+button {
+    border-radius: 5px;
+    margin: 10px 0 0 10px;
+    padding: 5px 15px;
+    font-size: 16px;
+}
+
+.icon-box {
+    display: flex;
+}
+
+.icon {
+    font-size: 16px;
+    margin-right: 20px;
 }
