--- a/style.css
+++ b/style.css
@@ -109,12 +109,21 @@ nav ul li a {
 }
 
 .watch-box {
-    margin-left: 20px;
-    border: 1px solid silver;
-    border-radius: 10px;
+    margin-left: 50px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    row-gap: 30px;
+    width: 80%;
+}
 
+.grid {
+    border: 1px solid #afa3a3;
+    border-radius: 15px;
+    margin: 0 15px;
+}
+
+.grid img {
+    width: 100%;
 }
 
 button {
@@ -131,4 +140,46 @@ button {
 .icon {
     font-size: 16px;
     margin-right: 20px;
+}
+
+.f-container {
+    width: 100%;
+    height: 30vh;
+    background-color: #161616;
+    margin-top: 60px;
+}
+
+.goal {
+    height: 10vh;
+    color: #ffffff;
+    font-size: 28px;
+    /* text-align: center;
+    vertical-align: middle;
+    line-height: 90px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+}
+
+hr {
+    background-color: #2c2a2a;
+    width: 90%;
+}
+
+.contact {
+    list-style: none;
+    text-decoration: none;
+    margin-top: 15px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact a {
+    text-decoration: none;
+    color: #dbcfcf;
+    margin: 25px;
+
 }
