--- a/style.css
+++ b/style.css
@@ -18,6 +18,41 @@ body {
     margin-top: 30px;
 }
 
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .container {
+        height: 100%;
+    }
+}
+
+.tab-cont {
+    width: 100%;
+    text-align: center;
+    font-weight: 700;
+}
+
+.tab-cont a {
+    width: 150px;
+    text-align: center;
+    border: 1px solid silver;
+    border-radius: 8px;
+    text-decoration: none;
+    padding: 15px 20px;
+    margin-top: 40px;
+
+}
+
+@media screen and (max-width: 576px) {
+    .tab-cont {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .tab-cont {
+        display: none;
+    }
+}
+
 .left-cont {
     margin: 30px;
     padding: 30px;
@@ -28,8 +63,20 @@ h1 {
     margin-bottom: -10px;
 }
 
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    h1 {
+        font-size: 3rem;
+    }
+}
+
 p {
     font-size: 2rem;
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    p {
+        font-size: 1rem;
+    }
 }
 
 .watch-btn {
@@ -67,6 +114,12 @@ p {
     height: 300px;
     background-color: #161616;
     border-radius: 8px;
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .small-cont {
+        display: none;
+    }
 }
 
 nav ul li {
@@ -116,6 +169,13 @@ nav ul li a {
     width: 80%;
 }
 
+@media screen and (max-width: 992px) {
+    .watch-box {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+}
+
 .grid {
     border: 1px solid #afa3a3;
     border-radius: 15px;
@@ -140,6 +200,32 @@ button {
 .icon {
     font-size: 16px;
     margin-right: 20px;
+}
+
+.view {
+    text-align: center;
+}
+
+.blog-1 {
+    border: 0 solid #ffffff;
+    border-radius: 8px;
+    background-color: #DD0000;
+    color: #ffffff;
+    padding: 15px 50px;
+    font-weight: 700;
+    margin-top: 40px;
+}
+
+@media screen and (max-width: 576px) {
+    .blog-1 {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .blog-1 {
+        display: none;
+    }
 }
 
 .f-container {
@@ -177,9 +263,15 @@ hr {
     align-items: center;
 }
 
+@media screen and (max-width: 992px) {
+    .contact {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
 .contact a {
     text-decoration: none;
     color: #dbcfcf;
     margin: 25px;
-
 }
