--- a/link/style.css
+++ b/link/style.css
@@ -113,13 +113,14 @@ nav ul li a {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     row-gap: 30px;
-    width: 80%;
+    column-gap: 30px;
+    width: 70%;
 }
 
 .grid {
     border: 1px solid #afa3a3;
     border-radius: 15px;
-    margin: 0 15px;
+    margin-right: 15px;
     text-align: center;
     width: 100%;
 }
